# Game_engines_LR2

src/: CMakeLists.txt  config.txt  main.cpp
src/Ecs/Components/: ComponentStorage.cpp  ComponentStorage.hpp
src/Ecs/Filter/: Filter.cpp  Filter.h  FilterBuilder.cpp  FilterBuilder.h
src/Ecs/Managers/: ScoreManager.cpp  ScoreManager.h
src/Ecs/ReadConfig/: ReadConfig.cpp  ReadConfig.h
src/Ecs/Systems/: IInitializer.h  ISystem.h  SystemsManager.cpp  SystemsManager.h
src/Ecs/Window/: Window.cpp  Window.h
src/Ecs/World/: World.cpp  World.h
src/Sample/Components/: BoxColliderComponent.h  CollisionComponent.h  ICollider.h  MoveInputEvent.h  SpriteComponent.h
src/Sample/Systems/: AsteroidSpawnSystem.cpp  AsteroidSpawnSystem.h  CollisionResolveSystem.cpp  CollisionResolveSystem.h  CollisionSystem.cpp  CollisionSystem.h  EntityFactory.cpp  EntityFactory.h  InitSystem.cpp  InitSystem.h  InputSystem.cpp  InputSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  ShootingSystem.cpp
